@@ -8,6 +8,12 @@ CHANGES
 
 - Document ``scan`` function in API docs.
 
+- Work around an issue in Python where ~ (tilde) is quoted by
+  urllib.quote & urllib.encode, even though it should not be according
+  to the RFC, as ~ is considered unreserved.
+
+  https://www.ietf.org/rfc/rfc3986.txt
+
 0.13 (2016-04-06)
 =================
 
